andrew/lldap/lldap-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  namespace: auth 
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lldap.dunde.live`)  
      kind: Rule
      services:
        - name: lldap-service
          port: 17170
  tls:
    secretName: dunde-live-tls
